refactor: remove deprecated hibernate structures/functions
Refs: XRDDEV-2713