@@ -27,13 +27,12 @@ package ee.ria.xroad.opmonitordaemon;
 
 import ee.ria.xroad.common.identifier.ClientId;
 import ee.ria.xroad.common.opmonitoring.OpMonitoringSystemProperties;
+import ee.ria.xroad.opmonitordaemon.mapper.OperationalDataRecordMapper;
 
 import com.google.common.collect.Sets;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.Before;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
 
 import java.lang.reflect.Field;
 import java.time.Instant;
@@ -66,9 +65,6 @@ public class OperationalDataRecordManagerTest extends BaseTestUsingDB {
             + " truncation is performed. It's nice to be this long. But if"
             + " strings are truncated then i should end already.";
 
-    @Rule
-    public final ExpectedException expectedException = ExpectedException.none();
-
     /**
      * Cleanup the stored records before each test.
      * @throws Exception if an error occurs.
@@ -76,7 +72,7 @@ public class OperationalDataRecordManagerTest extends BaseTestUsingDB {
     @Before
     public void beforeTest() throws Exception {
         int cleaned = doInTransaction(
-                session -> session.createQuery("delete OperationalDataRecord")
+                session -> session.createMutationQuery("delete OperationalDataRecordEntity")
                         .executeUpdate());
 
         log.info("Cleaned {} records", cleaned);
@@ -96,11 +92,12 @@ public class OperationalDataRecordManagerTest extends BaseTestUsingDB {
 
         assertEquals(1, result.size());
 
-        OperationalDataRecord resultRecord = result.getRecords().get(0);
+        OperationalDataRecord resultRecord = result.getRecords().getFirst();
 
         // The id field is the only field that differs between the original
         // data and the stored record, but storeRecords() adds
         // the missing id to the record variable.
+        resultRecord.setId(null);
         assertEquals(record, resultRecord);
     }
 
@@ -122,13 +119,13 @@ public class OperationalDataRecordManagerTest extends BaseTestUsingDB {
 
         result = queryRecords(1474968970L, 1474968990L);
         assertEquals(1, result.size());
-        assertNotNull(result.getRecords().get(0).getMessageId());
-        assertEquals(1474968980L, result.getRecords().get(0)
+        assertNotNull(result.getRecords().getFirst().getMessageId());
+        assertEquals(1474968980L, result.getRecords().getFirst()
                 .getMonitoringDataTs().longValue());
 
         result = queryRecords(1474968950L, 1474968970L);
         assertEquals(1, result.size());
-        assertEquals(1474968960L, result.getRecords().get(0)
+        assertEquals(1474968960L, result.getRecords().getFirst()
                 .getMonitoringDataTs().longValue());
     }
 
@@ -206,7 +203,7 @@ public class OperationalDataRecordManagerTest extends BaseTestUsingDB {
 
         assertEquals(1, result.size());
 
-        OperationalDataRecord record = result.getRecords().get(0);
+        OperationalDataRecord record = result.getRecords().getFirst();
 
         assertNotNull(record.getRequestInTs());
         assertEquals(14749689780000L, record.getRequestInTs().longValue());
@@ -228,7 +225,7 @@ public class OperationalDataRecordManagerTest extends BaseTestUsingDB {
 
         assertEquals(1, result.size());
 
-        record = result.getRecords().get(0);
+        record = result.getRecords().getFirst();
 
         assertEquals("192.168.3.250", record.getSecurityServerInternalIp());
 
@@ -237,7 +234,7 @@ public class OperationalDataRecordManagerTest extends BaseTestUsingDB {
                 Sets.newHashSet("faultCode"));
         assertEquals(1, result.size());
 
-        final OperationalDataRecord r = result.getRecords().get(0);
+        final OperationalDataRecord r = result.getRecords().getFirst();
 
         OperationalDataOutputSpecFields.OUTPUT_FIELDS.forEach(i -> {
             try {
@@ -348,7 +345,6 @@ public class OperationalDataRecordManagerTest extends BaseTestUsingDB {
         storeFullOperationalDataRecord(1474968963L, serviceProvider, client);
         storeFullOperationalDataRecord(1474968964L, serviceProvider, client);
 
-
         // Less than max records.
         OperationalDataRecordManager.setMaxRecordsInPayload(10);
         OperationalDataRecords result = queryRecords(1474968960L, 1474968980L);
@@ -409,7 +405,7 @@ public class OperationalDataRecordManagerTest extends BaseTestUsingDB {
 
         assertEquals(1, result.size());
 
-        OperationalDataRecord resultRecord = result.getRecords().get(0);
+        OperationalDataRecord resultRecord = result.getRecords().getFirst();
 
         assertEquals(LONG_STRING.substring(0, 255),
                 resultRecord.getMessageIssue());
@@ -419,12 +415,15 @@ public class OperationalDataRecordManagerTest extends BaseTestUsingDB {
         resultRecord.setMessageIssue("2" + LONG_STRING);
 
         doInTransaction(session -> {
-            session.saveOrUpdate(resultRecord);
+            var entity = OperationalDataRecordMapper.get().toEntity(resultRecord);
+
+            session.merge(entity);
             return null;
         });
 
         result = queryAllRecords();
-        OperationalDataRecord updatedResultRecord = result.getRecords().get(0);
+        assertEquals(1, result.size());
+        OperationalDataRecord updatedResultRecord = result.getRecords().getFirst();
 
         assertEquals(("2" + LONG_STRING).substring(0, 255),
                 updatedResultRecord.getMessageIssue());
